@@ -1,3 +1,11 @@
+2002-07-17  Duncan Mak  <duncan@ximian.com>
+
+	* WidgetViewer.cs: Changed the EventArgs stuff to match Mike's
+	latest commit.
+
+	* TestToolbar.cs: Thanks to Dietmar for fixing #27695. Added new
+	button for toggling showing tooltips.
+
 2002-07-16  Duncan Mak  <duncan@ximian.com>
 
 	* TestCheckButton.cs:
